<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">

    <!--设置考场页-->
    <string name="sunshine_interview">阳光面试</string>
    <string name="website">www.sunshine-interview.com.cn</string>
    <string name="wechat">欢迎关注阳光面试公众号</string>

    <string name="app_name">阳光考试系统</string>
    <string name="title_step0">考场验证</string>
    <string name="guide_step0">请输入考场号及验证码</string>
    <string name="school_name_text">------</string>
    <string name="classroom_id_text">------</string>
    <string name="classroom_location_text">------</string>
    <string name="college_id_text">------</string>
    <string name="interview_time_text">------</string>
    <string name="processing_time_text">------</string>
    <string name="interview_status_text">------</string>

    <string name="school_name">学校：</string>
    <string name="classroom_id">考场号：</string>
    <string name="classroom_location">考试地点：</string>
    <string name="college_id">学校编号：</string>
    <string name="interview_time">考试时间：</string>
    <string name="processing_time">进行时间：</string>
    <string name="interview_status">状态：</string>
    <string name="time_bj">北京时间：</string>

    <string name="roomid_text">考场号</string>
    <string name="verification_text">验证码</string>

    <string name="confirm_button">确认</string>

    <!--选择端-->
    <string name="title_step00">用户端选择</string>
    <string name="guide_step00">请选择考官／考生端</string>
    <string name="text_button_interviewer">考官</string>
    <string name="text_button_interviewee">考生</string>

    <!--选择场次页-->
    <string name="title_step1">考次选择</string>
    <string name="guide_step1">请选择考次</string>
    <string name="ckbx_skip">本场考试跳过签到环节</string>
    <string name="dialog_list_text">考次选择确认</string>
    <string name="dialog_btn_confirm_text">确认</string>>
    <string name="dialog_btn_cancel_text">取消</string>>

    <!--考官签到页-->
    <string name="title_step2">考官签到</string>
    <string name="guide_step2">请考官签到</string>

    <!--考生签到页-->
    <string name="Title_step2">考生签到</string>
    <string name="Guide_step2">请考生签到</string>

    <string name="reset_button">重置</string>
    <string name="shoot_button">拍照</string>

    <!--确认开始页面-->
    <string name="title_step3">面试即将开始</string>
    <string name="guide_step3">等待学生就绪</string>
    <string name="guide_step3_1">学生已就绪</string>
    <string name="special_start">手动开始</string>
    <string name="ready_start">开始</string>

    <!--等待选考场页面-->
    <string name="Guide_step3">等待考官开始面试</string>
    <string name="be_patient">请耐心等待</string>
    <string name="be_patient0">考官正在选择考次，请耐心等待</string>


    <!--面试进行页面-->
    <string name="title_step4">面试</string>
    <string name="the_end">结束面试</string>
    <string name="guide_step4">面试进行中</string>
    <string name="inprogressreminder">面试已开始，面试视频信息实时上链中</string>>


    <!--结束页面-->
    <string name="title_step5">结束</string>
    <string name="guide_step5">本场面试已结束</string>
    <string name="words">本场面试已结束，\n
    面试相关信息已存入北大数链\n
    感谢您的支持！</string>

    <!--结束页面-->
    <string name="Guide_step5">本场面试已结束</string>
    <string name="Words">本场面试已结束，\n
    面试相关信息已存入北大数链\n\n
    详情可访问阳光面试官方网站\n
        http://129.28.159.207/site/index.html\n
    获取本次面试数字证书\n\n

    感谢你参与本次考试！</string>

    <!--视频上传-->
    <string name="upload_title0">管理员验证</string>
    <string name="upload_title1">视频上传</string>
    <string name="upload_guide1">点击确认上传面试视频</string>
    <string name="video_info">本地有视频文件待上传，点击按钮确认上传</string>
    <string name="video_uploading">视频正在上传中，请勿退出此页面</string>


</resources>