<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.android.sunshineinterview.commonactivities.ChooseSideActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tl_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_step00"
        app:titleTextColor="@color/colorWhite" />

    <!--最右栏-->
    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_head"
        app:layout_constraintWidth_percent="0.3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/cardView">

            <!--logo栏-->
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/border"
                    app:layout_constraintBottom_toTopOf="@+id/videoView"
                    app:layout_constraintEnd_toEndOf="@+id/information_column_row0"
                    app:layout_constraintHeight_percent="0.5"
                    app:layout_constraintStart_toStartOf="@+id/information_column_row0"
                    app:layout_constraintTop_toBottomOf="@+id/information_column_row0">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHeight_percent="0.9"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.8">

                        <TextClock
                            android:id="@+id/textClock"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:format12Hour="北京时间 MM/dd/yy h:mmaa"
                            android:paddingBottom="1dp"
                            android:textSize="10sp"
                            android:typeface="serif"
                            android:visibility="visible" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/college_id_text"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:paddingBottom="1dp"
                            android:text="@string/college_id_text"
                            android:typeface="serif"
                            app:autoSizeTextType="uniform" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/school_name_text"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:paddingBottom="1dp"
                            android:text="@string/school_name_text"
                            android:typeface="serif"
                            app:autoSizeTextType="uniform"

                            />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/classroom_id_text"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:paddingBottom="1dp"
                            android:text="@string/classroom_id_text"
                            android:typeface="serif"
                            app:autoSizeTextType="uniform" />


                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/classroom_location_text"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:paddingBottom="1dp"
                            android:text="@string/classroom_location_text"
                            android:typeface="serif"
                            app:autoSizeTextType="uniform" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/interview_status_text"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:paddingBottom="1dp"
                            android:text="@string/interview_status_text"
                            android:typeface="serif"
                            app:autoSizeTextType="uniform" />


                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/interview_time_text"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:paddingBottom="1dp"
                            android:text="@string/interview_time_text"
                            android:typeface="serif"
                            app:autoSizeTextType="uniform" />

                    </LinearLayout>

                </android.support.constraint.ConstraintLayout>

                <FrameLayout
                    android:id="@+id/videoView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/border"
                    android:padding="2dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.25"
                    app:layout_constraintStart_toStartOf="parent">

                </FrameLayout>

                <LinearLayout
                    android:id="@+id/information_column_row0"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.25"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:gravity="center"
                            android:text="@string/sunshine_interview"
                            android:textColor="@color/colorWhite"
                            android:typeface="serif"
                            app:autoSizeTextType="uniform"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHeight_percent="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.19"
                            app:layout_constraintWidth_percent="0.8" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:gravity="center"
                            android:text="@string/wechat"
                            android:textColor="@color/colorWhite"
                            app:autoSizeTextType="uniform"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHeight_percent="0.2"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView4"
                            app:layout_constraintWidth_percent="0.8" />
                    </android.support.constraint.ConstraintLayout>

                </LinearLayout>

            </android.support.constraint.ConstraintLayout>

            <!--相关信息-->

            <!--视频-->
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <!--填空部分-->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_head">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/guide_step00"
            android:textSize="65sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.17000002" />

        <Button
            android:id="@+id/button_interviewee"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:drawableTop="@drawable/b2"
            android:gravity="center"
            android:text="@string/text_button_interviewee"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/button_interviewer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintStart_toEndOf="@+id/button_interviewer"
            app:layout_constraintTop_toTopOf="@+id/button_interviewer"
            app:layout_constraintWidth_percent="0.2" />

        <Button
            android:id="@+id/button_interviewer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:drawableTop="@drawable/b1"
            android:text="@string/text_button_interviewer"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintHorizontal_bias="0.28"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.32999998"
            app:layout_constraintWidth_percent="0.2" />

        <ProgressBar
            android:id="@+id/pb_chooseside"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:indeterminateTint="@color/colorPrimary"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_interviewee"
            app:layout_constraintStart_toEndOf="@+id/button_interviewer"
            app:layout_constraintTop_toBottomOf="@+id/button_interviewer"
            app:layout_constraintVertical_bias="0.23000002" />

    </android.support.constraint.ConstraintLayout>



</android.support.constraint.ConstraintLayout>