<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.android.sunshineinterview.MainActivity">


    <!--最右栏-->
    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="341dp"
        android:layout_height="0dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/cardView"
            tools:layout_editor_absoluteY="8dp">

            <!--logo栏-->
            <LinearLayout
                android:id="@+id/information_column_row0"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorSky"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:paddingTop="20dp"
                        android:text="@string/sunshine_interview"
                        android:textColor="@color/colorWhite"
                        android:textSize="60sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/website"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/wechat"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>

            <!--相关信息-->
            <LinearLayout
                android:id="@+id/information_column_row1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextClock
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:format12Hour="北京时间 MM/dd/yy h:mmaa"
                        android:gravity="center"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/school_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/school_name_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/school_name_text" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/classroom_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/classroom_id_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/classroom_id_text" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/classroom_location"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/classroom_location_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/classroom_location_text" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/interview_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/interview_id_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/interview_id_text" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/interview_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/interview_time_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/interview_time_text" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/processing_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/processing_time_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/processing_time_text" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/interview_status"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/interview_status_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/interview_status_text" />
                </LinearLayout>
            </LinearLayout>

            <!--视频-->
            <LinearLayout
                android:id="@+id/information_column_row2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <VideoView
                    android:id="@+id/videoView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <!--填空部分-->
    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="420dp"
        android:layout_height="255dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="218dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/enter_blocks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="58dp"
            tools:layout_editor_absoluteY="313dp">

            <!--请输入-->
            <LinearLayout
                android:id="@+id/guide_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="3"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="15dp"
                    android:text="@string/guide_step3"
                    android:textColor="@color/colorWhite"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toTopOf="@+id/enter_blocks"
                    app:layout_constraintStart_toStartOf="@+id/enter_blocks"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.26999998" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/wait"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center_vertical|center_horizontal|center"
                android:layout_weight="4"
                android:background="@color/colorWhite"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/wait_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal|center"
                    android:paddingLeft="10dp"
                    android:paddingTop="15dp"
                    android:text="@string/be_patient"
                    android:textColor="@color/colorGrey"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/enter_blocks"
                    app:layout_constraintStart_toStartOf="@+id/enter_blocks"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.26999998" />

            </LinearLayout>



        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_pic"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

</android.support.constraint.ConstraintLayout>